# bambuuzle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  publish.yml
bambuuzle/: __init__.py  __main__.py  archive.py  bambu_file.py  cli.py  plate.py  templates.py
scripts/: generate_logo.py
tests/: conftest.py  test_cli.py  test_create_scratch.py  test_modify_gcode.py  test_roundtrip.py
