[project]
name = "bambuuzle"
version = "0.1.0"
description = "Extract and re-insert gcode from Bambu Lab .gcode.3mf files"
authors = [
    {name = "Reto Stamm", email = "reto@retostamm.com"}
]
readme = "README.md"
license = "MIT"
keywords = ["bambu", "bambulab", "3mf", "gcode", "3d-printing", "bambu-lab", "slicer", "orca-slicer", "zip", "md5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/retospect/bambuuzle"
Repository = "https://github.com/retospect/bambuuzle"
Issues = "https://github.com/retospect/bambuuzle/issues"

[project.scripts]
bambuuzle = "bambuuzle.cli:main"

[tool.poetry]
name = "bambuuzle"
version = "0.1.0"
description = "Extract and re-insert gcode from Bambu Lab .gcode.3mf files"
authors = ["Reto Stamm <reto@retostamm.com>"]
packages = [{include = "bambuuzle"}]

[tool.poetry.scripts]
bambuuzle = "bambuuzle.cli:main"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^5.0.0"
black = ">=24,<27"
Pillow = ">=10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
