[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bambuuzle"
version = "0.1.0"
description = "Extract and re-insert gcode from Bambu Lab .gcode.3mf files"
authors = [
    {name = "Reto Stamm", email = "reto@retostamm.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["bambu", "bambulab", "3mf", "gcode", "3d-printing", "bambu-lab", "slicer", "orca-slicer", "zip", "md5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/retospect/bambuuzle"
Repository = "https://github.com/retospect/bambuuzle"
Issues = "https://github.com/retospect/bambuuzle/issues"

[project.scripts]
bambuuzle = "bambuuzle.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
